Revert BF on DocumentGenerationService for ET3 letters